# test_github_actions

./: pyproject.toml
.github/workflows/: run-tests.yaml
pda/: add.py  constants.py  get_data_from_api.py  get_weather_api.py  return_df.py
pda/src/: data.py
pda/tests/: test_add.py  test_return_df.py  test_transform_data.py  test_weather_apy.py
