[tool.poetry]
name = "action-github"
version = "0.1.0"
description = "Poetry to test github actions"
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"
packages = [{ include = "pda" }]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.31.0"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
