[tool.poetry]
name = "action-github"
version = "0.1.0"
description = "Poetry to test github actions"
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"
packages = [{ include = "pda" }]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.31.0"
pandas = "^2.1.0"
flake8 = "^6.1.0"
pytest = "^7.4.2"
pylint = "^2.17.6"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
